--- a/scss/partials/index.scss
+++ b/scss/partials/index.scss
@@ -1,4 +1,5 @@
 #index {
+  width:100%;
   display: flex;
   flex-flow: row wrap;
   align-content: space-around;
